# treecraft

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IDEA.md  LICENSE.md  Out.txt  Output.txt  README.md  TODO.md  output.txt  purpose.md  version.md
.github/workflows/: build-test.yml  build.yml  cargo.yml  coverage.yml  rust.yml
TreeStructureFormatter/: TSF_1.rs  TSF_2.rs  TSF_3.rs  TSF_4.rs
backup/: color.rs  format.rs  info.rs  lib.rs  list.rs  main.rs  metada.rs
backup_1/: lib.rs
backup_1/fsys/: filesystem.rs  list.rs
backup_1/platform/: mod.rs
backup_1/ty/: html.rs  mod.rs
backup_1/util/: mod.rs
feature/: 1.md  2.md  3.md  4.md  5.md
impl/: emit.rs  file_info.rs  flags.rs  info.rs  sort.rs
list_dir/: 1.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7_read_dir.rs
list_read_dir/: 1.rs  2.rs
print/: 1.rs
print_branch/: main.rs  print_branch.rs
read_dir/: 1.rs  2.rs  3.rs
script/: README.md
src/: Cargo.toml  ansi.rs  branch.rs  config.rs  context.rs  error.rs  file_info.rs  filter.rs  flag.rs  fmt.rs  format.rs  handle.rs  hash.rs  init.rs  lib.rs  list_dirs.rs  loc.rs  main.rs  metada.rs  output.rs  print_branch.rs  sort.rs  total.rs  tree.rs  walker.rs
src copy/: lib.rs  print_filename.rs
src copy 2/: lib.rs  metada.rs
src copy 2/engine/: link.rs  mod.rs  vec.rs
src copy 3/: flag.rs  lib.rs  output.rs
src copy 3/engine/: ring.rs
src/analysis/: ext.rs
src/config/: all.rs  configall.rs  configdef.rs  default.rs  mod.rs  user_input.rs
src/file/: file.rs  io.rs  (+1 more)
tree_rs/: Cargo.toml
vector/: 1_vector.rs
(+37 files in other folders)
